fixed footer email button, removed nav btns in footer on mobile homepage

--- a/css/styles.css
+++ b/css/styles.css
@@ -145,7 +145,7 @@ h4{
 }
 p{
   line-height: 1.8;
-  font-size:1.2em;
+  font-size:0.8em;
 }
 
 }
@@ -207,6 +207,10 @@ header p{
   flex-direction: column;
 }
 
+.links-sm{
+  display: none;
+}
+
 }
 
 .title{
@@ -255,7 +259,6 @@ header p{
   background-size: 100% auto;
   background-attachment: scroll;
   background-repeat: repeat;
-  margin-bottom: 8em;
   width: 100%;
   position: relative;
 }
@@ -291,8 +294,51 @@ header p{
   display:none;
 }
 
+.links-sm{
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-flow: row wrap;
+  font-family: "Overpass Bold";
 }
 
+.links-sm a{
+  padding: 1em 1.5em;
+  margin-top: 2em;
+  align-self: center;
+  text-transform:uppercase;
+  margin-left: 5px;
+}
+
+.homelink{
+  background-color:#343434;
+  color:#fcfcfc;
+
+}
+
+.aboutlink{
+  background-color:#243361;
+  color:#fcfcfc;
+
+}
+
+.worklink{
+  color:#3F403F; 
+  background-color:#79BEEE;
+
+}
+
+.emaillink{
+  background-color:#FFE66D;
+  color:#3F403F; 
+  padding: 1em 1.5em;
+  font-family: "Overpass Light";
+}
+
+}
+
+@media only screen and (min-width: 801px){
 .nav{
   width: 100%;
   position: relative;
@@ -394,9 +440,26 @@ header p{
   color: red;
 }
 
+}
 /*end header styles*/
 
 /*about section*/
+@media only screen and (max-width:800px){
+.about{
+  width: 100%;
+  height: auto;
+  position: relative;
+  z-index: 5;
+  padding:4em 0;
+  background-image: url("../img/cyc.jpg");
+  background-attachment: scroll;
+  background-size: cover;
+  background-position: center;
+
+}
+
+}
+
 .about{
   width: 100%;
   height: auto;
@@ -593,7 +656,7 @@ section:before{
   width: 100%;
   right: 0;
   height: 12em;
-  background: inherit;
+  background: transparent;
   -webkit-transform: skewY(7.5deg);
   transform: skewY(7.5deg) translateY(-10px);
   z-index: -1;
@@ -743,7 +806,7 @@ section:after{
   display: flex;
   -webkit-flex-direction: row;
   -ms-flex-direction:row;
-  flex-direction:row;
+  flex-direction: column;
   justify-content: space-around;
 }
 
